--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_navigation_page">navigationPage</string>
+    <string name="default_info_title">Default Location</string>
+
+    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
+
+    <string name="option_get_place">Get place</string>
+
+    <string name="pick_place">Choose a place</string>
 </resources>
